k8s_mainifest_file/infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: three-tier
  labels: 
    app: blogns
