k8s_mainifest_file/infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-lb
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: blog-alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:607416643673:certificate/18f3c810-8b3d-4915-a42b-0e45043cdce2
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  ingressClassName: alb
  rules:
    - host: blog.cloudmella.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-frontend-service
                port:
                  number: 8080
        
         # 👇 Default catch-all (matches any host not listed above)

    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-frontend-service # or your default frontend
                port:
                  number: 8080
